--- a/Class Management/Views/ViewTeacher.xaml
+++ b/Class Management/Views/ViewTeacher.xaml
@@ -19,7 +19,7 @@
                 <Setter Property="HorizontalAlignment" Value="Left"></Setter>
                 <Setter Property="Grid.Column" Value="0"></Setter>
                 <Setter Property="Background" Value="Transparent"/>
-                <Setter Property="Foreground" Value="White" />
+                <Setter Property="Foreground" Value="#3F51B5" />
             </Style>
 
             <Style x:Key="formtextbox"
@@ -40,7 +40,7 @@
                 <Setter Property="FontSize" Value="15" />
                 <Setter Property="Height" Value="30" />
                 <Setter Property="Width" Value="70" />
-                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="Background" Value="#3F51B5" />
                 <Setter Property="Foreground" Value="White" />
             </Style>
         </ResourceDictionary>
@@ -49,7 +49,7 @@
     <Viewbox>
         <Grid Height="798" Width="1550">
             <Grid Background="Black" Opacity="0.6" />
-            <Grid Background="DarkSlateBlue" Height="800" Width="1550">
+            <Grid Background="#ECEFF1" Height="800" Width="1550">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100" />
                     <RowDefinition Height="50" />
@@ -63,14 +63,16 @@
 
                 <Label x:Name="label" Grid.Row="0" 
                        Content="Teacher List" Margin="0,10,0,0" 
+                       Style="{StaticResource formlabel}"
                        HorizontalAlignment="Center" VerticalAlignment="Top" 
-                       Foreground="White" FontSize="30"/>
+                       FontSize="30"/>
 
                 <DataGrid x:Name="teacher_list" Height="500" Width="1400" Grid.Row="2"
                           IsReadOnly="True" HorizontalScrollBarVisibility="Visible" RowHeight="30"
                           SelectionUnit="FullRow" SelectionMode="Extended" MouseDoubleClick="teacher_list_MouseDoubleClick"
                           AutoGenerateColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False"
-                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,10,0,0" >
+                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,10,0,0" 
+                          BorderBrush="#3F51B5" BorderThickness="2">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn>
                             <DataGridTemplateColumn.CellTemplate>
@@ -101,12 +103,12 @@
                         Click="delete_all_Click" />
 
                 <ComboBox x:Name="segregator" Grid.Row="1" Margin="50,20,0,0" 
-                          BorderBrush="White" BorderThickness="0" 
+                          BorderBrush="#3F51B5" BorderThickness="1" 
                           SelectionChanged="segregator_SelectionChanged" Visibility="Visible"
                           HorizontalAlignment="Left" VerticalAlignment="Top" Height="30" Width="150" />
 
                 <Button x:Name="closeUC" Grid.Row="0" Width="30" Height="30" Click="closeUC_Click"
-                        Background="Transparent" Foreground="White"
+                        Background="#3F51B5" Foreground="White"
                         HorizontalAlignment="Right" Style="{StaticResource btn}">
                     <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
