--- a/Class Management/Views/DailyTimetable.xaml
+++ b/Class Management/Views/DailyTimetable.xaml
@@ -47,7 +47,7 @@
                 <Setter Property="Height" Value="30"></Setter>
                 <Setter Property="Width" Value="30"></Setter>
                 <Setter Property="Background" Value="Transparent"></Setter>
-                <Setter Property="Foreground" Value="BlueViolet"></Setter>
+                <Setter Property="Foreground" Value="DarkSlateBlue"></Setter>
             </Style>
 
             <Style x:Key="ChkboxSty" TargetType="CheckBox" BasedOn="{StaticResource MetroCheckBox}">
