--- a/Class Management/Views/SetTeacherTiming.xaml
+++ b/Class Management/Views/SetTeacherTiming.xaml
@@ -17,7 +17,7 @@
                 <Setter Property="HorizontalAlignment" Value="Left"></Setter>
                 <Setter Property="Grid.Column" Value="0"></Setter>
                 <Setter Property="Background" Value="Transparent" />
-                <Setter Property="Foreground" Value="White" />
+                <Setter Property="Foreground" Value="#3F51B5" />
             </Style>
 
             <Style x:Key="formtextbox"
@@ -79,7 +79,7 @@
     <Viewbox>
         <Grid Height="798" Width="1550">
             <Grid Background="Black" Opacity="0.6" />
-            <Grid Background="DarkSlateBlue" Height="800" Width="1550">
+            <Grid Background="#ECEFF1" Height="800" Width="1550">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100" />
                     <RowDefinition Height="50" />
@@ -89,7 +89,7 @@
                 <Label Grid.Row="0" 
                        Content="Set Teacher Timing" Margin="0,10,0,0" 
                        HorizontalAlignment="Center" VerticalAlignment="Top" 
-                       Foreground="White" FontSize="35"/>
+                       Foreground="#3F51B5" FontSize="35"/>
 
                 <!--Work here-->
                 <DataGrid x:Name="teacher_timing" Height="470" Width="1128" Grid.Row="2" MinColumnWidth="50" Grid.Column="0"
@@ -97,6 +97,7 @@
                           SelectionUnit="FullRow" SelectionMode="Extended" HorizontalContentAlignment="Center"
                           AutoGenerateColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False"
                           GridLinesVisibility="All"
+                          BorderBrush="#3F51B5" BorderThickness="2"
                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,10,0,0">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn>
@@ -121,7 +122,8 @@
                           IsReadOnly="True" HorizontalScrollBarVisibility="Visible" RowHeight="40" 
                           SelectionUnit="FullRow" SelectionMode="Extended" HorizontalContentAlignment="Center"
                           AutoGenerateColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False"
-                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1200,10,0,0">
+                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1200,10,0,0"
+                          BorderBrush="#3F51B5" BorderThickness="2">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Code" MinWidth="100" Binding="{Binding teacher_code}" />
                         <DataGridTextColumn Header="Preferred Timing" Binding="{Binding pref_timing}" />
@@ -136,7 +138,7 @@
                 <Label x:Name="sat" Width="135" Background="Bisque" Content="" HorizontalAlignment="Left" Margin="908,32,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
                 <Label x:Name="sun" Width="135" Background="YellowGreen" Content="" HorizontalAlignment="Left" Margin="1043,32,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
                 <Button x:Name="closeUC" Grid.Row="0" Width="30" Height="30" Click="closeUC_Click"
-                        Background="Transparent" Foreground="White"
+                        Background="#3F51B5" Foreground="White"
                         HorizontalAlignment="Right" Style="{StaticResource btn}">
                     <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
